--- a/Font-end/Trang quản trị/Quản trị/Product/Product.css
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.css
@@ -53,34 +53,8 @@
   transition    : 0.5s;
   
 }
-button{
-  margin-top      : 10px;
-  width           : 20%;
-  padding         : 10px;
-  border          : 1px solid #ccc;
-  border-radius   : 5px;
-  background-color: #4CAF50;
-  color           : white;
-  cursor          : pointer;
-  transition      : background-color 0.3s;
-  margin-bottom   : 10px;
-  margin-top      : 10px;
-  font-size: 13px;
-}
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-  font-size: 13px;
-}
-
-th, td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #f2f2f2;
+.selectTL select{
+  padding: 6px;
+  border-radius: 3px;
 }
