sửa thàng công single page !

--- a/Font-end/Trang quản trị/Quản trị/Home/Home.css
+++ b/Font-end/Trang quản trị/Quản trị/Home/Home.css
@@ -4,7 +4,9 @@
   font-family: 'Montserrat', sans-serif;
   box-sizing : border-box;
 }
-
+.admin-content{
+  margin-left: 9em;
+}
 .admin-content-container-main{
   display: flex;
 }
