--- a/Font-end/Trang chủ/TrangChu.css
+++ b/Font-end/Trang chủ/TrangChu.css
@@ -62,6 +62,20 @@ header {
   cursor: pointer;
 }
 
+.productSearch{
+  transition: 0.5s;
+  width: 1000px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.productSearch h3, p{
+  font-size: 16px;
+}
+.productSearch img{
+  height: 50px;
+  width: 50px;
+}
+
 .menuHead ul {
   list-style : none;
   display    : flex;
@@ -99,6 +113,7 @@ main {
 .slideshow-container {
   position: relative;
   width   : 100%;
+  margin-top: 50px;
 }
 
 .slide {
