--- a/Font-end/Trang quản trị/Quản trị/Product/Product.css
+++ b/Font-end/Trang quản trị/Quản trị/Product/Product.css
@@ -180,6 +180,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 .button-listproduct button{
   margin-left: 20px;
