--- a/Font-end/Trang cá nhân/Trang cá nhân.css
+++ b/Font-end/Trang cá nhân/Trang cá nhân.css
@@ -4,6 +4,29 @@
   font-family: Arial, sans-serif;
 }
 
+.profile-image {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.profile-image::after {
+  content: 'Cập nhật ảnh đại diện';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  color: white;
+  cursor: pointer;
+}
+
+.profile-image:hover::after {
+  opacity: 1;
+}
+
+
 .profile-picture img {
   border-radius: 50%;
   width: 150px;
@@ -11,6 +34,7 @@
   object-fit: cover;
   margin-right: 20px;
 }
+
 
 .profile-info {
   color: #333;
