--- a/Font-end/Trang cá nhân/Trang cá nhân.css
+++ b/Font-end/Trang cá nhân/Trang cá nhân.css
@@ -97,9 +97,16 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="email"] {
+input[type="text"]{
   width: 100%;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+input[type="date"] {
+  width: 12%;
   padding: 8px;
   font-size: 14px;
   border-radius: 4px;
