--- a/Font-end/Trang thanh toán/Trang thanh toán.css
+++ b/Font-end/Trang thanh toán/Trang thanh toán.css
@@ -113,3 +113,11 @@ button:hover {
   margin-top: 10px;
   color: #1d1c1c;
 }
+
+input[type="date"] {
+  width: 25%;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
