--- a/Font-end/Trang quản trị/Quản trị/Customer/Customer.css
+++ b/Font-end/Trang quản trị/Quản trị/Customer/Customer.css
@@ -5,7 +5,8 @@
   box-sizing : border-box;
 }
 
-.customer-container{
+.customer-container {
+  margin-top : 1em;
   margin-left: 19em;
 }
 
@@ -13,8 +14,34 @@
 .form-group {
   margin-bottom: 20px;
   position     : relative;
-  font-size: 13px;
+  font-size    : 13px;
 }
+
+.form-group a {
+  font-size: 15px;
+  background: #03a63c;
+  color: #fff;
+  padding: 0 10px;
+  border: 1px solid #03a63c;
+  border-radius: 5px;
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  transition: top 0.3s, font-size 0.3s, color 0.3s;
+}
+
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: transparent;
+  outline: none;
+  transition: border-color 0.3s;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
 .form-group input {
   width        : 100%;
   padding      : 10px;
@@ -25,8 +52,9 @@
   transition   : border-color 0.3s;
   margin-top   : 10px;
   font-size    : 15px;
-
+  white-space: pre-wrap;
 }
+
 
 .form-group input:focus {
   border-color: #6d026d;
@@ -51,36 +79,117 @@
   padding       : 0 5px;
   pointer-events: none;
   transition    : 0.5s;
-  
-}
-button{
-  margin-top      : 10px;
-  width           : 20%;
-  padding         : 10px;
-  border          : 1px solid #ccc;
-  border-radius   : 5px;
-  background-color: #4CAF50;
-  color           : white;
-  cursor          : pointer;
-  transition      : background-color 0.3s;
-  margin-bottom   : 10px;
-  margin-top      : 10px;
-  font-size: 13px;
+
 }
 
-table {
-  width: 100%;
+.selectTL {
+  display    : flex;
+  align-items: center;
+}
+
+.selectTL select {
+  padding      : 6px;
+  border-radius: 3px;
+}
+
+.img-group {
+  display    : flex;
+  align-items: baseline;
+  margin-top : 1em;
+  margin-left: 1.5em;
+
+}
+
+.img-group button {
+  margin-left: 29px;
+  padding    : 9px;
+}
+
+.table-product tr>th {
+  margin-right: 15px;
+}
+
+.button-TSXR {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  border-radius  : 5px;
+}
+
+.button-TSXR div {
+  margin-right : 20px;
+  padding      : 9px;
+  border       : 1px solid #03a63c;
+  border-radius: 5px;
+  cursor       : pointer;
+}
+
+
+.table-product {
+  margin-top     : 20px;
+  width          : 100%;
   border-collapse: collapse;
-  margin-top: 20px;
-  font-size: 13px;
 }
 
-th, td {
-  border: 1px solid #ccc;
-  padding: 8px;
+.table-product th,
+.table-product td {
+  border    : 1px solid #ddd;
+  padding   : 8px;
   text-align: left;
 }
 
-th {
+.table-product th {
   background-color: #f2f2f2;
+  text-align      : center;
+}
+
+.table-product td:nth-child(1),
+.table-product td:nth-child(2),
+.table-product td:nth-child(3),
+.table-product td:nth-child(4),
+.table-product td:nth-child(5) {
+  text-align: center;
+}
+
+.table-product img {
+  max-width : 50px;
+  max-height: 50px;
+}
+
+.table-product button {
+  padding      : 6px 12px;
+  margin-right : 5px;
+  margin-bottom: 10px;
+  cursor       : pointer;
+  color        : white;
+  background   : #45a049;
+  border       : none;
+  border-radius: 3px;
+  width: 60px;
+}
+
+.table-product button:hover {
+  background-color: white;
+  color: #45a049;
+  
+}
+.button-listproduct{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.button-listproduct button{
+  margin-left: 20px;
+  padding: 10px;
+  border: 1px solid #03a63c;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-group-date input{
+  padding: 9px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
