--- a/Font-end/Trang chủ/TrangChu.css
+++ b/Font-end/Trang chủ/TrangChu.css
@@ -64,15 +64,32 @@ header {
   cursor: pointer;
 }
 
-.productSearch{
-  transition: 0.5s;
-  width: 1000px;
-  margin-bottom: 10px;
+.productSearch-container {
+  text-align: center;
+  width: 100%;
+  height: 300px;
+  overflow: auto;
   cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
+
+.productSearch{
+  display: inline-block;
+  margin: 10px;
+  text-align: left;
+  
+}
+
 .productSearch h3, p{
   font-size: 16px;
 }
+
+.productSearch p{
+  
+  overflow: auto;
+}
+
 .productSearch img{
   height: 50px;
   width: 50px;
@@ -185,7 +202,7 @@ main {
 .Danhmuc {
   width         : 100%;
   padding-bottom: 100px;
-  padding-top   : 50px;
+  padding-top   : 10px;
 }
 
 .txtDanhmuc {
@@ -792,5 +809,8 @@ footer {
 }
 .cart-image-container img{
   width: 23px;
+}
+.red-text {
+  color: red;
 }
 
