--- a/Font-end/Trang chủ/TrangChu.css
+++ b/Font-end/Trang chủ/TrangChu.css
@@ -74,6 +74,16 @@ header {
   border: 1px solid #ccc;
 }
 
+.productSearch-container button{
+  padding:5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #03a63c;
+  cursor: pointer;
+  width: 150px;
+}
+
 .productSearch{
   display: inline-block;
   margin: 10px;
